# Griptape-nodes-x-Nuke-Workflows

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  griptape-nodes-library.json  griptape_nodes_x_nuke_workflows.json  pyproject.toml
griptape_nodes_x_nuke_workflows/nodes/: dummy_text_node.py
scripts/: update_headers.py
workflows/templates/: libraries_griptape-nodes-x-nuke-workflows_workflows_templates_nuke_flux_inpainting.py  nuke_OpenPose_Video_Detection.py  nuke_WAN_Reference_to_Video.py  nuke_basic_local_upscale_workflow.py  nuke_depth_anything_v2_video.py  nuke_flux_inpainting.py  nuke_image_gen_nano_banana.py  nuke_openpose_video.py  nuke_upscale_workflow.py  nuke_veo3_first_and_last_frame.py  nuke_video_mask_g-dino_sam2.py
