[project]
name = "griptape-nodes-x-nuke-workflows"
version = "0.1.0"
description = "Nuke-specific workflow nodes for Griptape Nodes"
authors = [{ name = "Kieran West" }]
requires-python = ">=3.12,<3.13"
dependencies = [
  "griptape-nodes>=0.86.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["griptape_nodes_x_nuke_workflows"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # Pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4", # flake8-comprehensions
  "UP", # pyupgrade
]
ignore = [
  "E501", # line too long (handled by formatter)
  "B008", # do not perform function calls in argument defaults
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[dependency-groups]
dev = ["pyright>=1.1.396", "pytest-asyncio>=0.21.0", "ruff>=0.8.0", "pytest"]

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["."]
exclude = [
  "**/templates/*",
  "tests/integration/*",
  ".venv",
  "**/node_modules",
  "**/__pycache__",
  "**/.*",
]
pythonVersion = "3.12"
reportIncompatibleMethodOverride = false
